package com.example.Spring_Boot_Foto_Kit.exceptions;

public class FotoException extends RuntimeException {
    public FotoException(String message) {
        super(message);
    }
}
